# cachyos-dots

./: .gitignore  README.md  bootstrap.sh  install.sh  typescript
btop/.config/btop/: btop.conf
btop/.config/btop/themes/: noctalia.theme
fastfetch/.config/fastfetch/: temp_no_logo.jsonc
fastfetch/.config/fastfetch/bad-apple-data/: bad-apple-data
fish/.config/fish/: config.fish  fish_variables
fish/.config/fish/conf.d/: SLSsteam.fish  vsteam.fish
fish/.config/fish/functions/: beammap.fish  beammod.fish  brrtfetch.fish  dots.fish  dotsync.fish  noctalia-update.fish  proton.fish  talker-proxy.fish
foot/.config/foot/themes/: noctalia
hypr/.config/hypr/: active-colors.conf  black-theme.conf  hyprland.conf  hyprtoolkit.conf  performance-mode.conf  variables.conf
hypr/.config/hypr/dms/: layout.conf
hypr/.config/hypr/hyprland/: env.conf  execs.conf  input.conf  (+2 more)
kitty/.config/kitty/: black-theme.conf  current-theme.conf  kitty.conf  kitty.conf.bak
noctalia/.config/environment.d/: 10-lc-time.conf
noctalia/.config/noctalia/: colors.json  plugins.json  settings.json
quickshell/.config/quickshell/noctalia-shell/Plugins/WaylandEffects/: BackgroundBlur.cpp  BackgroundBlur.h  BackgroundEffectManager.cpp  BackgroundEffectManager.h  CMakeLists.txt
scripts/Документы/scripts/: dashboard.sh  doom_terminal.sh  fastfetch-bad-apple.py  good_pizza_offline.sh  hydra-offline-wrapper.sh  hydra_saves.sh  kill_shell.sh  preformencehypr.py  restart_shell.sh  sim_click.sh  toggle_shell_bar.sh
waybar/.config/waybar/: config-mini  config-toggle.jsonc  style-mini.css  style-toggle.css
waybar/.config/waybar-mini/: config.jsonc  style.css
(+228 files in other folders)
